# sf-infra

./: .git-blame-ignore-revs  .gitignore  .gitreview  Makefile  README.md  Shakefile.hs  package.dhall  requirements.yml  run-centosinfra.sh  sf-infra.cabal  tox.ini
ADR/: 0000-use-markdown-any-decision-records.md  0001-sf-observability-stack-project.md  0002-eod-backstage.md  0002-sf-observability-stack-format.md  adr-template.md
Infra/: Prelude.dhall  README.md  package.dhall
actions/: README
ansible/: ansible-registry.cfg  ansible.cfg  hosts.dhall  hosts.yaml  hosts.yaml.wip
conf/: README.md  common.dhall  defaults.dhall  functions.dhall  infra.dhall  package.dhall  schemas.dhall  tree.dhall
doc/: how-to-add-a-ci-project.md  how-to-add-ibm-bm-standalone.md  how-to-add-k1s-instance.md  how-to-add-server.md  how-to-dedicated-workspace-for-a-project.md  how-to-delete-ibm-bm-standalone.md  how-to-manage-instance.md  how-to-networking.md  how-to-vault-secret.md  inventory.csv  inventory.md
files/: infra_key.pub
monitoring/: README.md  binding.dhall  demo.dhall  node-exporter-ibm-instances.dhall  package.dhall  prometheus-config.dhall  prometheus.dhall  prometheus.yaml  rules-afs.dhall  rules-afs.yaml  rules-backup.dhall  rules-backup.yaml  rules-dlrn.dhall  rules-dlrn.yaml  rules-es-check.dhall  rules-es-check.yaml  rules-http.dhall  rules-http.yaml  rules-ibm-instances.dhall  rules-ibm-instances.yaml  rules-k1s-zombie-containers.dhall  rules-k1s-zombie-containers.yaml  rules-mysqld.dhall  rules-mysqld.yaml  rules-node.dhall  rules-node.yaml  (+28 more)
pkg/: go.mod  (+2 more)
tools/correlate-build-failure/: JobOutput.hs  Main.hs  README.md  ZuulInventory.hs  cabal.project  correlate-build-failure.cabal
(+1434 files in other folders)
